[package]
name = "justshow"
version = "0.0.1"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[workspace]
members = [
        "crates/justwindows",
        "crates/justshow_x11",
        "crates/justshow_x11_simple",
        "crates/xrandr",
        "crates/shared_memory",
]