[package]
name = "just"
version = "0.0.1"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[workspace]
members = [
        "crates/just_immui",
        "crates/just_shared_memory",
        "crates/just_windows",
        "crates/just_x11",
        "crates/just_x11_simple",
        "crates/just_xrandr",
]